Tesselate: Fix FireFox layout issues
Resolves #267

--- a/ui/src/shared/components/tesselate/Tesselate.module.css
+++ b/ui/src/shared/components/tesselate/Tesselate.module.css
@@ -5,10 +5,13 @@
 
 .Row {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: left;
+  justify-content: space-between;
   border: 0;
   padding: 0;
+
+  &:last-child {
+    justify-content: left;
+  }
 }
 
 .Cell {
